[package]
name = "luadec"
version = "0.1.0"
authors = ["John Peel <john@dgby.org>"]
edition = "2018"
repository = "https://github.com/JohnPeel/repkg"
license = "MIT"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"

nom = "7.0.0"
num-traits = "0.2.14"
num-derive = "0.3.3"

clap = "3.0.0-beta.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
