[package]
name = "ppf"
version = "0.1.0"
authors = ["John Peel <john@dgby.org>"]
edition = "2018"
repository = "https://github.com/JohnPeel/repkg"
license = "MIT"

[dependencies]
log = "0.4"
env_logger = "0.9"

nom = "7.1"
num-traits = "0.2"
num-derive = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
