[package]
name = "repkg"
version = "0.1.0"
authors = ["John Peel <john@dgby.org>"]
edition = "2018"
repository = "https://github.com/JohnPeel/ppf"
license = "MIT"

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"

nom = "6.2.1"
clap = "3.0.0-beta.2"
num-traits = "0.2.14"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"

flate2 = "1.0.20"
glob = "0.3.0"

ppf = { path = "../ppf" }
pkg = { path = "../pkg" }
dds = { path = "../dds" }
