[package]
name = "repkg"
version = "0.1.0"
authors = ["John Peel <john@dgby.org>"]
edition = "2018"
repository = "https://github.com/JohnPeel/repkg"
license = "MIT"

[dependencies]
log = "0.4"
env_logger = "0.9"

nom = "7.1"
clap = { version = "3.1", features = ["derive"] }
num-traits = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

flate2 = "1.0"
glob = "0.3"

ppf = { path = "../ppf" }
pkg = { path = "../pkg" }
dds = { path = "../dds" }

image = "0.24"
